fix alignment

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -131,7 +131,7 @@
         cursor:pointer;
     }
 
-    .logo, .banner {
+    #logo, #banner {
       color: #000;
     }
 }
